ui && speech to text && editor upload

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "my-extension",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3002",
+  "proxy": "http://localhost:3002"  ,
+
   "dependencies": {
     "@babel/runtime": "^7.10.4",
     "@ckeditor/ckeditor5-build-classic": "^27.1.0",
@@ -15,7 +16,10 @@
     "css-loader": "^3.6.0",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "fs-extra": "^9.0.1",
+    "html-react-parser": "^1.2.6",
     "jquery": "^3.6.0",
     "postcss-flexbugs-fixes": "^4.2.1",
     "promise": "8.0.1",
@@ -24,10 +28,12 @@
     "raf": "3.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-frame-component": "^4.1.2",
     "react-speech-recognition": "^3.8.0",
     "regenerator-runtime": "^0.13.7",
     "resolve": "^1.17.0",
+    "styled-components": "^5.3.0",
     "video.js": "^7.11.8",
     "videojs-markers": "^1.0.1",
     "videojs-overlay": "^2.1.4",
