--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,10 @@
 {
-  "short_name": "My Extensionsss",
-  "name": "My Extensionsss",
+  "short_name": "적용 테스트",
+  "name": "적용 테스트",
   "version": "1.1",
   "manifest_version": 2,
   "background": {
     "scripts": ["app/background.js"]
-  },
-  "browser_action": {
   },
   "content_scripts" : [
     {
@@ -15,6 +13,9 @@
       "js": ["/static/js/content.js"]
     }
   ],
+  "browser_action": {
+  },
+
   "web_accessible_resources":[
     "/static/css/content.css", "/static/media/*"
   ],
