--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "적용 테스트",
-  "name": "적용 테스트",
+  "short_name": "적용 테스트33",
+  "name": "적용 테스트33",
   "version": "1.1",
   "manifest_version": 2,
   "background": {
